--- a/data_cleaning_example.ipynb
+++ b/data_cleaning_example.ipynb
@@ -2411,11 +2411,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "58678dc1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.8903717578961645\n"
+     ]
+    }
+   ],
+   "source": [
+    "from outliers_lib.find_outliers import new_function\n",
+    "\n",
+    "result = new_function(10, 8)\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
@@ -2434,7 +2447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
